--- a/Movied/app/build.gradle
+++ b/Movied/app/build.gradle
@@ -40,5 +40,6 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
     implementation fileTree(dir: "libs", include: ["*.jar"])
 }
