--- a/Movied/build.gradle
+++ b/Movied/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.5.10'
+    ext.material_version = '1.4.0'
     ext.appcompat_version = "1.4.0"
     ext.core_ktx_version = "1.7.0"
     ext.constraint_version = "2.1.2"
@@ -21,10 +22,11 @@ buildscript {
     ext.retrofit_version = "2.9.0"
     ext.logging_interceptor_version = '4.9.0'
 
-    ext.activity_ktx_version = "1.1.0"
-    ext.fragment_ktx_version = "1.2.5"
+    ext.activity_ktx_version = "1.4.0"
+    ext.fragment_ktx_version = "1.4.0"
 
     ext.hilt_version = '2.36'
+    ext.hilt_jetpack_version = '1.0.0-alpha01'
 
     ext.rxjava_version = "2.2.19"
     ext.rxandroid_version = "2.1.1"
@@ -36,12 +38,13 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 task clean(type: Delete) {
