--- a/Movied/core/build.gradle
+++ b/Movied/core/build.gradle
@@ -35,5 +35,27 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    //room
+    api "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
+
+    //retrofit
+    api "com.squareup.retrofit2:retrofit:$retrofit_version"
+    api "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    api "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
+
+    //rxjava
+    api "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    api "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    api "androidx.room:room-rxjava2:$room_version"
+    api "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
+    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    api "androidx.activity:activity-ktx:$activity_ktx_version"
+    api "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 }
