--- a/Movied/app/src/main/AndroidManifest.xml
+++ b/Movied/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.edsusantoo.movied">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MoviedApplication"
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Movied"
         tools:ignore="AllowBackup">
+        <activity
+            android:name=".ui.detailmovie.DetailMovieActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.register.RegisterActivity"
             android:exported="false" />
