--- a/Movied/app/src/main/AndroidManifest.xml
+++ b/Movied/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
