--- a/Movied/app/build.gradle
+++ b/Movied/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation "com.jakewharton.rxbinding2:rxbinding:2.0.0"
 
 }
