--- a/Movied/app/src/main/AndroidManifest.xml
+++ b/Movied/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:exported="false" />
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false" />
