--- a/Movied/build.gradle
+++ b/Movied/build.gradle
@@ -31,6 +31,7 @@ buildscript {
     ext.rxjava_version = "2.2.19"
     ext.rxandroid_version = "2.1.1"
 
+    ext.data_store_version = "1.0.0"
 
 
     repositories {
