--- a/Movied/core/build.gradle
+++ b/Movied/core/build.gradle
@@ -58,4 +58,10 @@ dependencies {
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.activity:activity-ktx:$activity_ktx_version"
     api "androidx.fragment:fragment-ktx:$fragment_ktx_version"
+
+    api "androidx.datastore:datastore-preferences:$data_store_version"
+
+    // optional - RxJava2 support
+    api "androidx.datastore:datastore-preferences-rxjava2:$data_store_version"
+
 }
