--- a/Movied/app/build.gradle
+++ b/Movied/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
 
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation "com.jakewharton.rxbinding2:rxbinding:2.0.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 }
