--- a/Movied/app/build.gradle
+++ b/Movied/app/build.gradle
@@ -37,7 +37,7 @@ android {
     viewBinding{
         enabled = true
     }
-    dynamicFeatures = [':videoplayer']
+    dynamicFeatures = [':videoplayer', ':favorite']
 }
 
 dependencies {
