--- a/Movied/build.gradle
+++ b/Movied/build.gradle
@@ -26,7 +26,7 @@ buildscript {
     ext.fragment_ktx_version = "1.4.0"
 
     ext.hilt_version = '2.36'
-    ext.hilt_jetpack_version = '1.0.0-alpha01'
+    ext.hilt_jetpack_version = '1.0.0-alpha03'
 
     ext.rxjava_version = "2.2.19"
     ext.rxandroid_version = "2.1.1"
@@ -40,7 +40,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
