--- a/Movied/videoplayer/build.gradle
+++ b/Movied/videoplayer/build.gradle
@@ -22,6 +22,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "API_KEY_YOUTUBE", '"AIzaSyBYmxZzmdjWgsq2LzdTCvdMPUNJZ5hrodM"'
+        }
+        debug {
+            buildConfigField "String", "API_KEY_YOUTUBE", '"AIzaSyBYmxZzmdjWgsq2LzdTCvdMPUNJZ5hrodM"'
         }
     }
     viewBinding{
