--- a/Movied/videoplayer/build.gradle
+++ b/Movied/videoplayer/build.gradle
@@ -25,6 +25,7 @@ android {
             buildConfigField "String", "API_KEY_YOUTUBE", '"AIzaSyBYmxZzmdjWgsq2LzdTCvdMPUNJZ5hrodM"'
         }
         debug {
+            minifyEnabled false
             buildConfigField "String", "API_KEY_YOUTUBE", '"AIzaSyBYmxZzmdjWgsq2LzdTCvdMPUNJZ5hrodM"'
         }
     }
