--- a/Movied/app/build.gradle
+++ b/Movied/app/build.gradle
@@ -22,7 +22,12 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -40,6 +45,8 @@ android {
     dynamicFeatures = [':videoplayer', ':favorite']
 }
 
+
+
 dependencies {
     implementation project(":core")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -47,6 +54,5 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation "com.jakewharton.rxbinding2:rxbinding:2.0.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 
 }
