--- a/Movied/core/build.gradle
+++ b/Movied/core/build.gradle
@@ -6,6 +6,7 @@ plugins {
 }
 apply from: '../shared_dependencies.gradle'
 
+
 android {
     compileSdk 31
 
@@ -21,7 +22,12 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
