--- a/Movied/build.gradle
+++ b/Movied/build.gradle
@@ -33,6 +33,8 @@ buildscript {
 
     ext.data_store_version = "1.0.0"
 
+    ext.mockito_version = "3.4.0"
+
 
     repositories {
         google()
@@ -48,6 +50,12 @@ buildscript {
     }
 
 }
+
+
+allprojects {
+    apply from: "$rootDir/ktlint.gradle"
+}
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
