--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,3 +37,7 @@
           - store_artifacts:  
               path: app/build/outputs/apk/debug/
               destination: artifact-file
+          - run :
+          - run:
+              name: Run Ktlint
+              command: ./gradlew ktlint
