--- a/Movied/shared_dependencies.gradle
+++ b/Movied/shared_dependencies.gradle
@@ -18,4 +18,6 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
     kaptAndroidTest "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
 
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+
 }
