--- a/Movied/videoplayer/src/main/AndroidManifest.xml
+++ b/Movied/videoplayer/src/main/AndroidManifest.xml
@@ -30,4 +30,10 @@
         </activity>
     </application>
 
+    <queries>
+        <intent>
+            <action android:name="com.google.android.youtube.api.service.START" />
+        </intent>
+    </queries>
+
 </manifest>
